--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,6 @@
-// {
-//   "extends": [
-//     "next/core-web-vitals",
-//     "next/typescript"
-//   ]
-// }
-
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn"] 
-  }
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript"
+  ]
 }
